# CUDASieve

./: .gitignore  CMakeLists.txt
cmake/: CUDASieveConfig.cmake.in
include/CUDASieve/: launch.cuh
samples/: CMakeLists.txt  sumPrimes.cu
src/: CMakeLists.txt  cstest.cpp  main.cpp
src/CUDASieve/: global.cu
